soft-serve/soft-serve-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soft-serve
  namespace: soft-serve
spec:
  ports:
    - name: "23231"
      port: 23231
      targetPort: 23231
    - name: "23232"
      port: 23232
      targetPort: 23232
    - name: "23233"
      port: 23233
      targetPort: 23233
    - name: "9418"
      port: 9418
      targetPort: 9418
  selector:
    app: soft-serve
