soft-serve/soft-serve-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soft-serve
  namespace: soft-serve
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: git.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: git
            port: 
              name: http
  tls:
    - hosts:
        - git.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
